# CPMULTI

./: .gitignore  CMakeLists.txt  Main.cpp
include/: CannyEdgeDetection.hpp  CannyMenu.ui.hpp  DenoisingMenu.ui.hpp  DiscreteFourierTransform.hpp  DiscreteFourierTransformMenu.ui.hpp  GaussianBlurMenu.ui.hpp  GaussianBlurProcessor.hpp  ImageManager.io.hpp  InputValidator.h  InputValidator.hpp  MainMenu.ui.hpp  TerminalDisplay.h  TerminalDisplay.hpp  ThreadManager.hpp
src/: CannyEdgeDetection.cpp  DiscreteFourierTransform.cpp  GaussianBlurProcessor.cpp  InputValidator.cpp  README.md  TerminalDisplay.cpp
src/config/: ThreadManager.cpp
src/core/: CannyEdgeDetection.cpp  DiscreteFourierTransform.cpp  GaussianBlurProcessor.cpp
src/io/: ImageManager.cpp
src/ui/: CannyMenu.ui.cpp  DenoisingMenu.ui.cpp  DiscreteFourierTransformMenu.ui.cpp  GaussianBlurMenu.ui.cpp  MainMenu.ui.cpp
